[package]
name = "mt-mqtt"
version = "0.1.0"
authors = ["nader marandi <nader.marandi@samim.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.6"
num-traits = "0.2.12"
num-derive = "0.3.2"