[package]
name = "mt-mqtt"
version = "0.1.0"
authors = ["nader marandi <nader.marandi@samim.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
strum = "0.25.0"
strum_macros = "0.25.3"